src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account_ERP_Id__c</fullName>
        <label>Account ERP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Con_Installation_Number__c</fullName>
        <formula>Connection__r.SAP_Installation_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Con Installation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_ERP_ID__c</fullName>
        <label>Contract ERP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <label>Contract Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_status__c</fullName>
        <label>Duration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defined with renewal</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAN_Id__c</fullName>
        <formula>Connection__r.EAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAN Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAV__c</fullName>
        <label>EAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fine_Electricity__c</fullName>
        <label>Fine Electricity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fine_Gas__c</fullName>
        <label>Fine Gas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Frequency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Of_Solar_Panel__c</fullName>
        <label>Length Of Solar Panel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Electrcity__c</fullName>
        <label>Margin Electrcity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Gas__c</fullName>
        <label>Margin Gas</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Sales_Price__c</fullName>
        <label>Maximum Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Usage__c</fullName>
        <label>Maximum Usage (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Usage_m3__c</fullName>
        <label>Maximum Usage (m3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Volume__c</fullName>
        <label>Maximum Volume (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Volume_m3__c</fullName>
        <label>Maximum Volume (m3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Solar_Panels__c</fullName>
        <label>Number Of Solar Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Boilers__c</fullName>
        <label>Number of Boilers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Thermostats__c</fullName>
        <label>Number of Thermostats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROD_Utility_Type__c</fullName>
        <formula>TEXT(Connection__r.Utility_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PROD Utility Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Non-Commodity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Record_Type_Name__c</fullName>
        <label>Product Record Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Reason__c</fullName>
        <label>Quote Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Of_Boiler__c</fullName>
        <label>Type Of Boiler</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Thermostat__c</fullName>
        <label>Type Of Thermostat</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Day__c</fullName>
        <label>Usage Day (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Night__c</fullName>
        <label>Usage Night (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Total_Hour__c</fullName>
        <label>Usage Total Hour (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Type__c</fullName>
        <formula>Text(Connection__r.Utility_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Bandwidth_Electricity__c</fullName>
        <label>Variable Bandwidth Electricity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variable_Bandwidth_Gas__c</fullName>
        <label>Variable Bandwidth Gas</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volume_Off_Peak__c</fullName>
        <label>Volume Off-Peak (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Peak__c</fullName>
        <label>Volume Peak (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Usage_per_Connection_kWh__c</fullName>
        <label>Yearly Usage per Connection (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Usage_per_Connection_m3__c</fullName>
        <label>Yearly Usage per Connection (m3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>